<resources>
    <string name="app_name">FastFoto</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_free_images">Download free images</string>
    <string name="discover">Discover</string>
    <string name="color">Color</string>
    <string name="orientation">Orientation</string>
    <string name="any">Any</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="history">History</string>
    <string name="top_tags">Top tags</string>
    <string name="most_popular">Most popular</string>
    <string name="see_all">See all</string>
    <string name="last_seen">Last seen</string>
    <string name="categories">Categories</string>
    <string name="no_favorite_images">No favorite images !</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="skip">skip</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_underlined"><u>Sign in</u></string>
    <string name="sign_in_with">Sign in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>
