<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.CategoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:buttonGravity="center_vertical"
        app:title="@string/category"
        app:titleTextAppearance="@style/MyToolbarStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/sub_head_textview"
                android:text="@string/color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                style="@style/sub_head_textview"
                android:text="@string/category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                style="@style/sub_head_textview"
                android:text="@string/orientation" />

            <RadioGroup
                android:id="@+id/category_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/any" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/horizontal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>